Move plugin ids to their own file.  Fix one plugin ID had not been updated

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
 
   "background": {
     "scripts": [
+      "js/plugins.js",
       "js/tst.js",
       "js/chord.js", 
       "js/dictionary.js", 
